--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -5,5 +5,10 @@
 </head>
 <body>
 	<h1>Hello World</h1>
+
+		<p>This is a test to see how the paragraph works. This is also a reminder to make sure I know how and when to indent to make my code look more readable.</p>
+
+		<p>This sentence is my 2nd paragraph and to test how to use the <strong>strong</strong> command. Hopefully this works as <strong>intended</strong>.</p>
+
 </body>
 </html>
