Add hyperlink to a site

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -29,5 +29,7 @@
 			<li>Ninetails</li>
 		</ol>
 
+		<p>For more information on <a href="https://en.wikipedia.org/wiki/Pok%C3%A9mon">Pokemon</a>, click!</p>
+
 </body>
 </html>
