Add links to other pages on the homepage

--- a/html/moon_bootz/index.html
+++ b/html/moon_bootz/index.html
@@ -7,5 +7,15 @@
 
 <h1>Welcome to Moon Bootz! Boots so cool they're out of this world!</h1>
 
+<h2>Here are some links for some more information:</h2>
+
+<nav>
+	<ul>
+		<li><a href="product_details.html">About</a></li>
+		<li><a href="contact.html">Contact Us</a></li>
+		<li><a href="legal/waiver.html">Legal</a></li>
+	</ul>
+</nav>
+
 </body>
 </html>
