--- a/html/moon_bootz/contact.html
+++ b/html/moon_bootz/contact.html
@@ -9,5 +9,12 @@
 
 	<p>Call 1-800-555-5555</p>
 
+
+
 </body>
+
+<footer>
+	<a href="index.html">Click here to go back to homepage</a>
+</footer>
+
 </html>
