Add photo and credit on homepage

--- a/html/moon_bootz/index.html
+++ b/html/moon_bootz/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 	<h1>Welcome to Moon Bootz! Boots so cool they're out of this world!</h1>
+		<img src="images/blue_moon.jpg" alt="Blue Moon">
+	<p>Photo by <a href="https://creativecommons.org/licenses/by-sa/2.0/">dinobike</a>
 	<h2>Here are some links for some more information:</h2>
 	<nav>
 		<ul>
