Add 2nd table to practice rowspan and colspan

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -26,5 +26,36 @@
 			<td>December 15, 1993</td>
 		</tr>
 	</table>
+	<table border=2>
+		<tr>
+			<th>A</th>
+			<th>B</th>
+			<th colspan="2">C</th>
+		</tr>
+		<tr>
+			<td>Test 1</td>
+			<td>Test 2</td>
+			<td>Test 3</td>
+			<td>Test 4</td>
+
+		</tr>
+		<tr>
+			<td>Test 5</td>
+			<td>Test 6</td>
+			<td>Test 7</td>
+			<td>Test 8</td>
+		</tr>
+		<tr>
+			<td rowspan="2">Test 9</td>
+			<td>Test 10</td>
+			<td>Test 11</td>
+			<td>Test 12</td>
+		</tr>
+		<tr>
+			<td>Test 13</td>
+			<td>Test 14</td>
+			<td>Test 15</td>
+		</tr>
+	</table>
 </body>
 </html>
