--- a/html/forms/example-form.html
+++ b/html/forms/example-form.html
@@ -1,8 +1,8 @@
-<form name="adventure" action="" method="post">
+<form name="adventure" action="https://httpbin.org/post" method="post">
   <fieldset>
     <div>
-      <label>Full name:</label>
-      <input type="text" name="fullname">
+      <label>Favorite Ice Cream:</label>
+      <input type="text" name="icecream">
     </div>
 
     <div>
