Add css styling to index.html

--- a/css/css-demo/index.html
+++ b/css/css-demo/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles/elegant-styles.css" type="text/css">
   <link rel="stylesheet" href="styles/fixed-contact.css" type="text/css">
   <link rel="stylesheet" href="styles/practice.css" type="text/css">
-</head>
+  </head>
 <body>
   <h1 id="resume-title">Resume for Imogen Ary-Perrson</h1>
   <section id="personal-objective">
@@ -29,6 +29,9 @@
         <li>Wrangled flaming hula hoops</li>
         <li>Served as first assistant to trapeze team</li>
         <li class="featured">Provided quality assurance for cotton candy</li>
+        <ol>
+        	<li>Also provided quality assurance for animal food</li>
+        </ol>
       </ul>
       </section>
     </section>
