Add picture files and css file to main page

--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Octopus With a Hat</title>
+	<link rel="stylesheet" type="text/css" href="hatstyle.css">
 </head>
 <body>
-
+<main>
+	<img src="hat.png">
+	<img src="glasses.png">
+	<img src="octopus.png">
+</main>
 </body>
 </html>
