--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <main>
-	<img src="hat.png">
-	<img src="glasses.png">
-	<img src="octopus.png">
+	<img id="hat" src="hat.png">
+	<img id="glasses" src="glasses.png">
+	<img id="octopus" src="octopus.png">
 </main>
 </body>
 </html>
