Change tags on both files

--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -5,10 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="hatstyle.css">
 </head>
 <body>
-<main>
-	<img class="hat" src="hat.png">
-	<img class="glasses" src="glasses.png">
-	<img class="octopus" src="octopus.png">
-</main>
+<div>	
+	<div><img class="hat" src="hat.png"></div>
+	<div><img class="spectacles" src="glasses.png"></div>
+	<div><img class="octopi" src="octopus.png"></div>
+</div>
 </body>
 </html>
