Change order in which pictures appear

--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -5,10 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="hatstyle.css">
 </head>
 <body>
-<div>	
-	<div><img class="hat" src="hat.png"></div>
-	<div><img class="spectacles" src="glasses.png"></div>
-	<div><img class="octopi" src="octopus.png"></div>
-</div>
+<div class="relative">	
+	<img class="octopi" src="octopus.png">
+	<img class="hat" src="hat.png">
+	<img class="spectacles" src="glasses.png">
+	</div>
 </body>
 </html>
