Change tags and styling to fit for responsive design

--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -5,10 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="hatstyle.css">
 </head>
 <body>
-<div class="relative">	
-	<img class="octopi" src="octopus.png">
-	<img class="hat" src="hat.png">
-	<img class="spectacles" src="glasses.png">
+<div class="octopus">
+	<img src="octopus.png">
+   	<div class="glasses"><img src="glasses.png"></div>
+   	<div class="hat"><img src="hat.png"></div>
 </div>
 </body>
 </html>
