Copy paste from pair full code

--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -1,8 +1,8 @@
 <!--
 Write your names here:
-1.
-2.
-We spent [#] hours on this challenge.
+1. Melanie Gershman
+2. Timothy Tao
+We spent 2 hours on this challenge.
 -->
 
 <!-- This challenge uses HTML5 syntax that may not be available in all browsers (It works in Chrome and Safari, from my testing. (<details> and<summary>). -->
@@ -11,12 +11,12 @@ We spent [#] hours on this challenge.
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="gps2-1.css">  <!-- Insert a link to the stylesheet here -->
+    <link rel="stylesheet" href="gps2-1.css">  <!-- Insert a link to the stylesheet here -->
     <title>Git Cheat Sheet</title>
   </head>
 
   <body>
-    <header>
+    <header id="intro">
       <h1>GitHub: Git Cheat Sheet</h1>
       <p>Git is the open source distributed version control system that
         facilitates GitHub activities on your laptop or desktop.
@@ -277,5 +277,6 @@ We spent [#] hours on this challenge.
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
   <!-- Add your reflection here as a comment. -->
+
   </body>
-</html>
+</html> 
