Add reflection comment at the bottom of html page

--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -277,6 +277,7 @@ We spent 2 hours on this challenge.
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
   <!-- Add your reflection here as a comment. -->
+  <!-- This week has definitely been more frustrating than the previous weeks, but through all that frustrating I was able to learn the code that I needed to. Positioning feels much better now and I'm glad that I got to practice and work out everything this time in a much shorter amount of time. Even though I was frustrated last week when learning CSS it feels as though I'm starting to understand everything at a much quicker pace and now I know a gameplan to do every time I need to tackle this in the future. -Timothy Tao -->
 
   </body>
 </html> 
