Link script.js to index.html

--- a/web_dev/client_side_js/index.html
+++ b/web_dev/client_side_js/index.html
@@ -43,5 +43,6 @@
 	</p>
 </nav>
 <footer>Pok&eacute;mon &copy; 2002-2016 Pok&eacute;mon. &copy; 1995-2016 Nintendo/Creatures Inc./GAME FREAK inc. TM, &reg; and Pok&eacute;mon character names are trademarks of Nintendo.</footer>
+<script src="script.js"></script>
 </body>
 </html>
