Add id to main photo to allow access for script.js file. Use js to create a border around the main photo, and then use an event listener to change border color and thickness when picture is clicked

--- a/web_dev/client_side_js/index.html
+++ b/web_dev/client_side_js/index.html
@@ -7,7 +7,7 @@
 <body>
 <main>
 <h1 class="main-title">Welcome to my childhood obsession: Pok&eacute;mon!</h1>
-	<img src="images/landscape-1456483171-pokemon2.jpg">
+	<img id="main-photo" src="images/landscape-1456483171-pokemon2.jpg">
 	<section class="blue">
 	<h2>Why do I like it?</h2>
 		<p>
