Add a button that changes text by clicking more than once

--- a/web_dev/jquery/index.html
+++ b/web_dev/jquery/index.html
@@ -8,5 +8,6 @@
 <body>
 <p>Charmander evolves into...</p>
 <button type="button">Evolve</button>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
